k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-client
  template:
    metadata:
      labels:
        app: ts-client
    spec:
      containers:
      - name: ts-client
        image: subhankarm2312/ts-client
        ports:
        - containerPort: 5173
