k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ts-client-service
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
