k8s/ingress-frontend-only-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-frontend-only-ingress-prod
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/cors-allow-origin-list: "https://tinystepscdc.com"
    traefik.ingress.kubernetes.io/cors-allow-methods: "GET,POST,PUT,DELETE,OPTIONS,PATCH"
    traefik.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since"
    traefik.ingress.kubernetes.io/cors-allow-credentials: "true"
    traefik.ingress.kubernetes.io/cors-max-age: "86400"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tinystepscdc.com
    secretName: tinystepscdc-tls
  rules:
  - host: tinystepscdc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-frontend-service
            port:
              number: 80
