k8s/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-react-client-ingress-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://tinystepscdc.com,https://www.tinystepscdc.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - tinystepscdc.com
    - www.tinystepscdc.com
    secretName: tinystepscdc-tls
  rules:
  - host: tinystepscdc.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ts-api-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-react-client-service
            port:
              number: 80
  - host: www.tinystepscdc.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ts-api-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-react-client-service
            port:
              number: 80
